# jsonapi-deserialize-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pull-request.yml  release.yml
jsonapi_deserialize/: Cargo.toml
jsonapi_deserialize/src/: deserialize.rs  document.rs  error.rs  included.rs  lib.rs  link.rs
jsonapi_deserialize_derive/: Cargo.toml
jsonapi_deserialize_derive/src/: lib.rs
test_suite/: Cargo.toml
test_suite/tests/: error.rs  optional-field.rs  reference-relationships.rs  rename.rs  resource-relationships.rs
